--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,40 @@ h6 {
   margin: 0;
   font-weight: 400;
 }
+/* General style */
+.article_header {
+  text-align: center;
+  margin: 0 auto;
+  width: 72vw;
+}
+.article_header h3 {
+  font-family: 'Kaushan Script', cursive;
+  font-size: 24px;
+  color: #333;
+  margin-top: 90px;
+}
+.article_header h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 30px;
+  color: #333;
+  margin: 0;
+  text-transform: uppercase;
+}
+.article_header h2:after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background-color: #f38181;
+  margin: 40px auto;
+}
+.article_header p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  color: #999999;
+  margin-bottom: 100px;
+}
+/* Intro block */
 .INTRO {
   background-image: url(../img/bannerBackground.png);
   background-size: cover;
@@ -23,7 +57,7 @@ h6 {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 20px 0 30px 0;
+  margin: 20px 0 20px 0;
 }
 .INTRO .INTRO_block .INTRO_header .logo {
   font-family: 'Montserrat', sans-serif;
@@ -34,10 +68,10 @@ h6 {
   color: #fff;
   text-decoration: none;
   text-transform: uppercase;
+  margin: 0 2vw;
   font-family: 'Montserrat', sans-serif;
   font-size: 14px;
   font-weight: 400;
-  margin: 0 2vw;
 }
 .INTRO .INTRO_block .INTRO_header a:last-child {
   margin: 0 0 0 28px;
@@ -66,7 +100,7 @@ h6 {
   font-weight: 700;
   line-height: 0.95;
   text-transform: uppercase;
-  margin: 30px auto 40px auto;
+  margin: 30px auto 30px auto;
 }
 .INTRO .INTRO_block .INTRO_main h1:after {
   content: "";
@@ -100,7 +134,6 @@ h6 {
   padding: 0;
 }
 .INTRO .INTRO_block .INTRO_footer ol li {
-  display: inline-block;
   list-style-type: none;
   font-family: 'Montserrat', sans-serif;
   font-size: 18px;
@@ -127,4 +160,370 @@ h6 {
   background-color: #f38181;
   position: absolute;
   top: -3px;
+}
+/* About block */
+.ABOUT .ABOUT_block {
+  width: 88vw;
+  margin: 0 auto;
+}
+.ABOUT .ABOUT_block .ABOUT_galery {
+  display: flex;
+  justify-content: space-between;
+}
+.ABOUT .ABOUT_block .ABOUT_galery .ABOUT_galery_item {
+  width: 380px;
+  position: relative;
+  z-index: 1;
+  background-color: #95e1d3;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.ABOUT .ABOUT_block .ABOUT_galery .ABOUT_galery_item span {
+  width: 100%;
+  padding-top: 20px;
+  position: absolute;
+  z-index: 2;
+  display: block;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  color: #fff;
+  opacity: 0;
+  text-align: center;
+  transition: 0.4s;
+}
+.ABOUT .ABOUT_block .ABOUT_galery .ABOUT_galery_item img {
+  transition: 0.4s;
+  display: block;
+}
+.ABOUT .ABOUT_block .ABOUT_galery .ABOUT_galery_item:after {
+  content: "";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  transition: 0.4s;
+  background: linear-gradient(0deg, #fce38a, #f38181);
+}
+.ABOUT .ABOUT_block .ABOUT_galery .ABOUT_galery_item:hover img {
+  transform: translate(-10px, -10px);
+  transition: 0.4s;
+}
+.ABOUT .ABOUT_block .ABOUT_galery .ABOUT_galery_item:hover span {
+  opacity: 1;
+  transition: 0.4s;
+  transform: translate(-10px, -10px);
+}
+.ABOUT .ABOUT_block .ABOUT_galery .ABOUT_galery_item:hover:after {
+  opacity: 0.9;
+  transition: 0.4s;
+  transform: translate(-10px, -10px);
+}
+/* Numbers Block */
+.NUMBERS {
+  background-color: #95e1d3;
+  margin-top: 100px;
+}
+.NUMBERS .NUMBERS_block {
+  width: 88vw;
+  margin: 0 auto;
+}
+.NUMBERS .NUMBERS_block .NUMBERS_content {
+  display: grid;
+  width: 88vw;
+  grid-template-columns: repeat(5, 20%);
+  grid-template-rows: repeat(2, 50%);
+}
+.NUMBERS .NUMBERS_block .NUMBERS_content .NUMBERS_item {
+  color: #fff;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 270px;
+  border-left: 1px solid rgba(255, 255, 255, 0.3);
+}
+.NUMBERS .NUMBERS_block .NUMBERS_content .NUMBERS_item:last-child {
+  border-right: 1px solid rgba(255, 255, 255, 0.3);
+}
+.NUMBERS .NUMBERS_block .NUMBERS_content .NUMBERS_item .number {
+  display: block;
+  font-size: 72px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+  margin-bottom: 15px;
+}
+.NUMBERS .NUMBERS_block .NUMBERS_content .NUMBERS_item .number-defenition {
+  display: block;
+  font-size: 14px;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+}
+/* SERVICE block */
+.SERVICE_table {
+  margin: 0 auto;
+  width: 88vw;
+  display: grid;
+  grid-template-columns: repeat(3, 33.3%);
+  grid-template-rows: repeat(2, 1fr);
+}
+.SERVICE_table .SERVICE_table_item {
+  display: flex;
+  margin-top: 50px;
+  padding: 0 60px 50px 0;
+}
+.SERVICE_table .SERVICE_table_item .SERVICE_img {
+  margin-right: 30px;
+}
+.SERVICE_table .SERVICE_table_item .SERVICE_text p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  color: #999999;
+  width: 100%;
+  line-height: 25px;
+}
+.SERVICE_table .SERVICE_table_item .SERVICE_text span {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+.SERVICE_table .SERVICE_table_item:nth-child(1) {
+  border-bottom: 1px solid #e5e5e5;
+}
+.SERVICE_table .SERVICE_table_item:nth-child(2) {
+  border-bottom: 1px solid #e5e5e5;
+}
+.SERVICE_table .SERVICE_table_item:nth-child(3) {
+  border-bottom: 1px solid #e5e5e5;
+}
+/* CROSSPLATFORM block */
+.CROSSPLATFORM {
+  background-image: url(../img/featureBackground.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 15px;
+  height: 100%;
+}
+.CROSSPLATFORM .CROSSPLATFORM_block {
+  position: relative;
+}
+.CROSSPLATFORM .CROSSPLATFORM_block .CROSSPLATFORM_devices {
+  position: relative;
+  overflow: hidden;
+}
+.CROSSPLATFORM .CROSSPLATFORM_block .CROSSPLATFORM_devices .CROSSPLATFORM_tablet {
+  position: relative;
+  left: 31vw;
+  display: block;
+}
+.CROSSPLATFORM .CROSSPLATFORM_phone {
+  position: absolute;
+  left: 53.7%;
+  top: 49%;
+  z-index: 200;
+}
+/* ACTIVITY block */
+.ACTIVITY .ACTIVITY_block {
+  width: 88vw;
+  margin: 0 auto;
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content {
+  display: flex;
+  margin-top: 95px;
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content .activity_content_image {
+  background-image: url(../img/activity_photo.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  max-height: 397px;
+  width: 50vw;
+  margin-right: 30px;
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content .ACTIVITY_content_item {
+  width: 50vw;
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content .ACTIVITY_content_item .accordion {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: space-between;
+  /* ACCORDION */
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content .ACTIVITY_content_item .accordion .accordion_item {
+  border: 1px solid #e5e5e5;
+  margin-bottom: 10px;
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content .ACTIVITY_content_item .accordion .accordion_item:last-child {
+  margin-bottom: 0;
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content .ACTIVITY_content_item .accordion .accordion_header {
+  position: relative;
+  cursor: pointer;
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content .ACTIVITY_content_item .accordion .accordion_arrow {
+  position: absolute;
+  right: 20px;
+  top: 23px;
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content .ACTIVITY_content_item .accordion .active .accordion_arrow {
+  transform: rotate(180deg);
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content .ACTIVITY_content_item .accordion .accordion_icon {
+  margin: 12px;
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  top: 0;
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content .ACTIVITY_content_item .accordion .accordion_title {
+  padding: 19px 0 19px 60px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content .ACTIVITY_content_item .accordion .accordion_main {
+  display: none;
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content .ACTIVITY_content_item .accordion .active_main {
+  padding: 20px 25px 25px 20px;
+  border-top: 1px solid #e5e5e5;
+  display: block;
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content .ACTIVITY_content_item .accordion .active_main p {
+  margin: 0;
+  height: 140px;
+  padding-right: 20px;
+  overflow-y: scroll;
+  font-family: 'Roboto', sans-serif;
+  font-size: 15px;
+  color: #999999;
+  font-style: italic;
+  line-height: 24px;
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content .ACTIVITY_content_item .accordion .active_main p::-webkit-scrollbar {
+  width: 4px;
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content .ACTIVITY_content_item .accordion .active_main p::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+  border-radius: 2.5px;
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content .ACTIVITY_content_item .accordion .active_main p::-webkit-scrollbar-thumb {
+  background-color: #95e1d3;
+  border-radius: 2.5px;
+}
+.ACTIVITY .ACTIVITY_block .ACTIVITY_content .ACTIVITY_content_item .accordion .active_main p::-webkit-scrollbar-thumb:hover {
+  background-color: #75c0b2;
+}
+/* Quote block */
+.QUOTE {
+  margin-top: 120px;
+  background-color: #f8f8f8;
+}
+.QUOTE .QUOTE_content {
+  margin: 0 auto;
+  width: 72.5vw;
+  padding: 70px 0;
+  display: flex;
+}
+.QUOTE .QUOTE_content .QUOTE_icon {
+  margin-right: 60px;
+}
+.QUOTE .QUOTE_content .QUOTE_icon img {
+  padding: 44px;
+  border: 3px solid #95e1d3;
+}
+.QUOTE .QUOTE_content .QUOTE_text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100vw;
+}
+.QUOTE .QUOTE_content .QUOTE_text p {
+  font-family: 'Roboto', sans-serif;
+  font-size: 24px;
+  color: #999999;
+  font-weight: 300;
+  font-style: italic;
+  line-height: 36px;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+.QUOTE .QUOTE_content .QUOTE_text p:before {
+  content: "\201c";
+}
+.QUOTE .QUOTE_content .QUOTE_text p:after {
+  content: "\201d";
+}
+.QUOTE .QUOTE_content .QUOTE_text .QUOTE_author {
+  margin-top: 20px;
+  position: relative;
+  font-family: 'Kaushan Script', cursive;
+  font-size: 24px;
+  color: #000;
+}
+.QUOTE .QUOTE_content .QUOTE_text .QUOTE_author:before {
+  content: "";
+  display: inline-block;
+  width: 60px;
+  height: 3px;
+  background-color: #f38181;
+  position: relative;
+  top: -5px;
+  margin-right: 10px;
+}
+@media (max-width: 1333px) {
+  .ABOUT_galery .ABOUT_galery_item img {
+    width: 100%;
+  }
+}
+@media (max-width: 1080px) {
+  .NUMBERS_content {
+    grid-template-columns: 16.5% 16.5% 34% 16.5% 16.5% !important;
+  }
+  .NUMBERS_content .NUMBERS_item1 {
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+    height: 135px !important;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  }
+  .NUMBERS_content .NUMBERS_item2 {
+    grid-row: 2 / 3;
+    grid-column: 1 / 3;
+    height: 135px !important;
+    border-right: 1px solid rgba(255, 255, 255, 0.3);
+  }
+  .NUMBERS_content .NUMBERS_item3 {
+    grid-row: 1 / 3;
+    grid-column: 3 / 4;
+    height: 100% !important;
+  }
+  .NUMBERS_content .NUMBERS_item4 {
+    grid-row: 1;
+    grid-column: 4 / 6;
+    height: 135px !important;
+    border-right: 1px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  }
+  .NUMBERS_content .NUMBERS_item5 {
+    grid-row: 2;
+    grid-column: 4 / 6;
+    height: 135px !important;
+  }
+  .SERVICE_table {
+    grid-template-columns: repeat(2, 50%);
+    grid-template-rows: repeat(3, 1fr);
+  }
+  .SERVICE_table .SERVICE_table_item:nth-child(4) {
+    border-bottom: 1px solid #e5e5e5;
+  }
 }
