--- a/styles/styles.less
+++ b/styles/styles.less
@@ -11,10 +11,55 @@
     font-size: @fs;
 }
 
+.roboto(@fs) {
+    font-family: 'Roboto', sans-serif;
+    font-size: @fs;
+    color: #999999;
+}
+
 h1, h6 {
     margin: 0;
     font-weight: 400;
 }
+
+/* General style */
+
+.article_header {
+    text-align: center;
+    margin: 0 auto;
+    width: 72vw;
+
+    h3 {
+        font-family: 'Kaushan Script', cursive;
+        font-size: 24px;
+        color: #333;
+        margin-top: 90px;
+    }
+
+    h2 {
+        font-family: 'Montserrat', sans-serif;
+        font-size: 30px;
+        color: #333;
+        margin: 0;
+        text-transform: uppercase;
+    }
+    h2:after {
+        content: "";
+        display: block;
+        width: 60px;
+        height: 3px;
+        background-color: #f38181;
+        margin: 40px auto;
+    }
+    p {
+        font-family: 'Roboto', sans-serif;
+        font-size: 15px;
+        color: #999999;
+        margin-bottom: 100px;
+    }
+}
+
+/* Intro block */
 
 .INTRO {
     background-image: url(../img/bannerBackground.png);
@@ -33,10 +78,10 @@ h1, h6 {
 
         .INTRO_header {
             height: 60px;
-            display: flex; // block now use flex display model
+            display: flex; // block now use flex display model (row)
             justify-content: space-between; // logo and nav attached to the edges of the parent
             align-items: center;
-            margin: 20px 0 30px 0;
+            margin: 20px 0 20px 0; // header (nav and logo) will looks better with it
             
             .logo {
                 .montserrat(@fs: 30px; @fw: 700;);
@@ -46,8 +91,9 @@ h1, h6 {
                 color: @intro_color;
                 text-decoration: none;
                 text-transform: uppercase;
+                margin: 0 2vw; // distance between links in nav
                 .montserrat(@fs: 14px; @fw: 400;);
-                margin: 0 2vw;
+               
             }
         
             a:last-child {
@@ -79,7 +125,7 @@ h1, h6 {
                 .montserrat(@fs: 6em; @fw: 700;);
                 line-height: .95;
                 text-transform: uppercase;
-                margin: 30px auto 40px auto;
+                margin: 30px auto 30px auto; // set margin for .welcome and .btn_more
                 
                 &:after {
                     content: "";
@@ -100,7 +146,7 @@ h1, h6 {
                 text-decoration: none;
                 text-transform: uppercase;
                 .montserrat(14px, 700);
-                transition: background 0.1s linear, color 0.1s linear;
+                transition: background 0.1s linear, color 0.1s linear; 
 
                 &:hover {
                     transition: background 0.1s linear, color 0.1s linear;
@@ -112,17 +158,16 @@ h1, h6 {
 
         .INTRO_footer {
             ol {
-                display: flex;
-                justify-content: space-between;
+                display: flex; // block now use flex display model (row)
+                justify-content: space-between; // li now attached to the edges of the parent
                 padding: 0;
             
                 li {
-                    display: inline-block;
                     list-style-type: none;
                     font-family: 'Montserrat', sans-serif;
                     font-size: 18px;
                     text-transform: uppercase;
-                    position: relative;
+                    position: relative; // before elements use this element coordinate system
                     border-top: 3px solid #fff;
                     width: 18.5vw;
                     padding: 15px 0;
@@ -152,4 +197,453 @@ h1, h6 {
         }  
 
     }
+}
+
+/* About block */
+
+.ABOUT {
+    
+    .ABOUT_block {
+        width: 88vw;
+        margin: 0 auto;
+
+        .ABOUT_galery {
+            display: flex;
+            justify-content: space-between;	
+
+            .ABOUT_galery_item {
+                width: 380px;
+                position: relative;
+                z-index: 1;
+                background-color: #95e1d3;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
+                span {
+                   
+                    width: 100%;
+                    padding-top: 20px;
+                    position: absolute;
+                    z-index: 2;
+                    display: block;
+                    font-family: 'Montserrat', sans-serif;
+                    font-weight: 700;
+                    font-size: 18px;
+                    color: #fff;
+                    opacity: 0;
+                    text-align: center;
+                        
+                    transition: 0.4s;
+                }
+                
+                img {
+                    transition: .4s;
+                    display: block;
+                }
+
+                &:after {
+                    content: "";
+                    position: absolute;
+                    opacity: 0;
+                    top: 0;
+                    right: 0;
+                    bottom: 0;
+                    left: 0;
+                    transition: 0.4s;
+                
+                    background: linear-gradient(0deg, #fce38a, #f38181);
+                }
+
+                &:hover {
+                    img {
+                        transform: translate(-10px, -10px);
+                        transition: 0.4s;
+                    }
+
+                    span {
+                        opacity: 1;
+                        transition: 0.4s;
+                        transform: translate(-10px, -10px);
+                    }                
+                }
+
+                &:hover:after {
+                    opacity: .9;
+                    transition: 0.4s;
+                    transform: translate(-10px, -10px);
+                }
+            }
+
+        }
+    }
+}
+
+/* Numbers Block */
+
+.NUMBERS {
+    background-color: #95e1d3;
+    margin-top: 100px;
+
+    .NUMBERS_block {
+        width: 88vw;
+        margin: 0 auto;
+
+        .NUMBERS_content {
+            display: grid;
+            width: 88vw;
+            
+            grid-template-columns: repeat(5, 20%);
+            grid-template-rows: repeat(2, 50%);
+
+            .NUMBERS_item {
+                color: #fff;
+                display: flex;
+                text-align: center;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                height: 270px;
+                border-left: 1px solid rgba(255, 255, 255, .3);
+
+
+
+                &:last-child {
+                    border-right: 1px solid rgba(255, 255, 255, .3);
+                }
+
+                .number {
+                    display: block;
+                    font-size: 72px;
+                    font-family: 'Montserrat', sans-serif;
+                    font-weight: 700;
+                    margin-bottom: 15px;
+                }
+
+                .number-defenition {
+                    display: block;
+                    font-size: 14px;
+                    text-transform: uppercase;
+                    font-family: 'Montserrat', sans-serif;
+                }
+            }
+        }
+    }
+}
+
+/* SERVICE block */
+
+.SERVICE_table {
+    margin: 0 auto;
+    width: 88vw;
+    display: grid;
+    grid-template-columns: repeat(3, 33.3%);
+    grid-template-rows: repeat(2, 1fr);
+
+    .SERVICE_table_item {
+        display: flex;
+        margin-top: 50px;
+        padding: 0 60px 50px 0;
+
+        .SERVICE_img {
+            margin-right: 30px;
+        }
+
+        .SERVICE_text p {
+            .roboto(@fs: 15px;);
+            width: 100%;
+            line-height: 25px;
+        }
+
+        .SERVICE_text span {
+            .montserrat(@fs: 14px; @fw: 400;);
+            text-transform: uppercase;
+        }
+    }
+
+    .SERVICE_table_item:nth-child(1) {
+        border-bottom: 1px solid #e5e5e5;
+    }
+    .SERVICE_table_item:nth-child(2) {
+        border-bottom: 1px solid #e5e5e5;
+    }
+    .SERVICE_table_item:nth-child(3) {
+        border-bottom: 1px solid #e5e5e5;
+    }
+}
+
+/* CROSSPLATFORM block */
+
+.CROSSPLATFORM {
+    background-image: url(../img/featureBackground.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 15px;
+    height: 100%;
+    
+    .CROSSPLATFORM_block {
+        position: relative;
+
+        .CROSSPLATFORM_devices {
+            position: relative;
+            overflow: hidden;
+    
+            .CROSSPLATFORM_tablet {
+                position: relative;
+                
+                left: 31vw;
+                display: block;
+            }
+        }
+    }
+    .CROSSPLATFORM_phone {
+        position: absolute;
+        left: 53.7%;
+        top: 49%;
+        z-index: 200;
+    }
+}
+
+/* ACTIVITY block */
+
+.ACTIVITY {
+
+    .ACTIVITY_block {
+        width: 88vw;
+        margin: 0 auto;
+
+        .ACTIVITY_content {
+            display: flex;
+            margin-top: 95px;
+
+            .activity_content_image {
+                background-image: url(../img/activity_photo.png);
+                background-position: center;
+                background-repeat: no-repeat;
+                background-size: cover;
+                max-height: 397px;
+                width: 50vw;
+                margin-right: 30px;
+            }
+
+            .ACTIVITY_content_item {
+                width: 50vw;
+
+                .accordion {
+                    height: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    align-items: space-between;
+                
+                    .accordion_item {
+                        border: 1px solid #e5e5e5;
+                        margin-bottom: 10px;
+                    }
+
+                    .accordion_item:last-child {
+                        margin-bottom: 0;
+                    }
+
+                    .accordion_header {
+                        position: relative;
+                        cursor: pointer;
+                    }
+
+                    .accordion_arrow {
+                        position: absolute;
+                        right: 20px;
+                        top: 23px;
+                    }
+                    
+                    .active .accordion_arrow{
+                        transform: rotate(180deg);
+                    }
+                    
+                    .accordion_icon {
+                        margin: 12px;
+                        position: absolute;
+                        z-index: 1;
+                        left: 0;
+                        top: 0;
+                    }
+
+                    .accordion_title {
+                        padding: 19px 0 19px 60px;
+                        .montserrat(@fs: 15px; @fw: 400;);
+                        text-transform: uppercase;
+                    }     
+                    
+                    .accordion_main {
+                        display: none;
+                    }
+
+                    .active_main {
+                        padding: 20px 25px 25px 20px;
+                        border-top: 1px solid #e5e5e5;
+                        display: block;
+
+                        p {
+                            margin: 0;
+                            height: 140px;
+                            padding-right: 20px;
+                            overflow-y: scroll;
+                            .roboto(@fs: 15px);
+                            font-style: italic;
+                            line-height: 24px;
+
+
+                            &::-webkit-scrollbar {
+                                width: 4px;
+                            }
+        
+                            &::-webkit-scrollbar-track {
+                                background-color: #f5f5f5;
+                                border-radius: 2.5px;
+                            }
+                                
+                            &::-webkit-scrollbar-thumb {
+                                background-color: #95e1d3;
+                                border-radius: 2.5px;
+                            }
+                                
+                            &::-webkit-scrollbar-thumb:hover{
+                                background-color:#75c0b2;
+                            }
+                        }
+                    } /* ACCORDION */
+                }
+            }
+        }
+    }
+}
+
+/* Quote block */
+
+.QUOTE {
+    margin-top: 120px;
+    background-color: #f8f8f8;
+    
+    .QUOTE_content {
+        margin: 0 auto;
+        width: 72.5vw;
+        padding: 70px 0;
+        display: flex;
+
+        .QUOTE_icon {
+            margin-right: 60px;
+
+            img {
+                padding: 44px;
+                border: 3px solid #95e1d3;
+            }
+        }
+
+        .QUOTE_text {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            width: 100vw;
+            
+            p {
+                .roboto(@fs: 24px;);
+                font-weight: 300;
+                font-style: italic;
+                line-height: 36px;
+                padding: 0;
+                margin: 0;
+                width: 100%;
+            }
+            
+            p:before {
+                content: "\201c";
+            }
+
+            p:after {
+                content: "\201d";
+            }
+
+            .QUOTE_author {
+                margin-top: 20px;
+                position: relative;
+                .kaushan(@fs: 24px;);
+                color: #000;
+
+                &:before {
+                    content: "";
+                    display: inline-block;
+                    width: 60px;
+                    height: 3px;
+                    background-color: #f38181;
+                    position: relative;
+                    top: -5px;
+                    margin-right: 10px;
+                }
+            }
+        } // Quote text
+    } // Quote content
+} // Quote 
+
+
+
+@media (max-width: 1333px) {
+    .ABOUT_galery {
+
+        .ABOUT_galery_item img {
+            width: 100%;
+        }
+
+    }
+}
+
+@media (max-width: 1080px) {
+   .NUMBERS_content {
+    grid-template-columns: 16.5% 16.5% 34% 16.5% 16.5% !important;
+    
+        .NUMBERS_item1 {
+            grid-row: ~"1 / 2";
+            grid-column: ~"1 / 3";
+
+            height: 135px !important;
+            border-bottom: 1px solid rgba(255, 255, 255, .3);
+        }
+        .NUMBERS_item2 {
+            grid-row: ~"2 / 3";
+            grid-column: ~"1 / 3";
+
+            height: 135px !important;
+            border-right: 1px solid rgba(255, 255, 255, .3);
+        }
+        .NUMBERS_item3 {
+            grid-row: ~"1 / 3";
+            grid-column: ~"3 / 4";
+            height: 100% !important;
+        }
+        .NUMBERS_item4 {
+            grid-row: 1;
+            grid-column: ~"4 / 6";
+
+            height: 135px !important;
+            border-right: 1px solid rgba(255, 255, 255, .3);
+            border-bottom: 1px solid rgba(255, 255, 255, .3);
+        }
+        .NUMBERS_item5 {
+            grid-row: 2;
+            grid-column: ~"4 / 6";
+
+            height: 135px !important;
+            
+        }
+   }
+
+   .SERVICE_table {
+       grid-template-columns: repeat(2, 50%);
+       grid-template-rows: repeat(3, 1fr);
+
+       .SERVICE_table_item:nth-child(4) {
+        border-bottom: 1px solid #e5e5e5;
+    }
+   }
+
 }
