--- a/styles/styles.less
+++ b/styles/styles.less
@@ -1,5 +1,3 @@
-@intro_color: #fff;
-
 .montserrat(@fs, @fw) {
     font-family: 'Montserrat', sans-serif;
     font-size: @fs;
@@ -43,6 +41,7 @@ h1, h6 {
         margin: 0;
         text-transform: uppercase;
     }
+
     h2:after {
         content: "";
         display: block;
@@ -51,13 +50,14 @@ h1, h6 {
         background-color: #f38181;
         margin: 40px auto;
     }
+
     p {
         font-family: 'Roboto', sans-serif;
         font-size: 15px;
         color: #999999;
         margin-bottom: 100px;
     }
-}
+} // article_header
 
 /* Intro block */
 
@@ -66,7 +66,7 @@ h1, h6 {
     background-size: cover; // image display in full size
     background-position: 50% 50%; // adaptive background image
     height: 100vh;
-    color: @intro_color;
+    color: #fff;
 
     .INTRO_block {
         width: 88vw;
@@ -88,7 +88,7 @@ h1, h6 {
             }
 
             a {
-                color: @intro_color;
+                color: #fff;
                 text-decoration: none;
                 text-transform: uppercase;
                 margin: 0 2vw; // distance between links in nav
@@ -112,7 +112,7 @@ h1, h6 {
                 border-bottom: 3px solid #fce38a;
                 padding-bottom: 10px;
             }
-        }
+        } // INTRO_header
 
         .INTRO_main {
             text-align: center;
@@ -154,7 +154,7 @@ h1, h6 {
                     color: #333;
                 }
             }  
-        }
+        } // INTRO_main
 
         .INTRO_footer {
             ol {
@@ -193,11 +193,10 @@ h1, h6 {
                         top: -3px;
                     }
                 }
-            }
-        }  
-
-    }
-}
+            } // ol
+        }  // INTRO_footer
+    } // INTRO_block
+} // INTRO
 
 /* About block */
 
@@ -221,7 +220,6 @@ h1, h6 {
                 align-items: center;
 
                 span {
-                   
                     width: 100%;
                     padding-top: 20px;
                     position: absolute;
@@ -233,7 +231,6 @@ h1, h6 {
                     color: #fff;
                     opacity: 0;
                     text-align: center;
-                        
                     transition: 0.4s;
                 }
                 
@@ -251,7 +248,6 @@ h1, h6 {
                     bottom: 0;
                     left: 0;
                     transition: 0.4s;
-                
                     background: linear-gradient(0deg, #fce38a, #f38181);
                 }
 
@@ -260,7 +256,6 @@ h1, h6 {
                         transform: translate(-10px, -10px);
                         transition: 0.4s;
                     }
-
                     span {
                         opacity: 1;
                         transition: 0.4s;
@@ -273,11 +268,10 @@ h1, h6 {
                     transition: 0.4s;
                     transform: translate(-10px, -10px);
                 }
-            }
-
-        }
-    }
-}
+            } // ABOUT_galery_item
+        } // ABOUT_galery
+    } // ABOUT_block
+} // ABOUT
 
 /* Numbers Block */
 
@@ -292,7 +286,6 @@ h1, h6 {
         .NUMBERS_content {
             display: grid;
             width: 88vw;
-            
             grid-template-columns: repeat(5, 20%);
             grid-template-rows: repeat(2, 50%);
 
@@ -305,8 +298,6 @@ h1, h6 {
                 align-items: center;
                 height: 270px;
                 border-left: 1px solid rgba(255, 255, 255, .3);
-
-
 
                 &:last-child {
                     border-right: 1px solid rgba(255, 255, 255, .3);
@@ -326,10 +317,10 @@ h1, h6 {
                     text-transform: uppercase;
                     font-family: 'Montserrat', sans-serif;
                 }
-            }
-        }
-    }
-}
+            } // NUMBERS_item
+        } // NUMBERS_content
+    } // NUMBERS_block
+} // NUMBERS
 
 /* SERVICE block */
 
@@ -370,7 +361,7 @@ h1, h6 {
     .SERVICE_table_item:nth-child(3) {
         border-bottom: 1px solid #e5e5e5;
     }
-}
+} // SERVICE_table
 
 /* CROSSPLATFORM block */
 
@@ -391,21 +382,21 @@ h1, h6 {
     
             .CROSSPLATFORM_tablet {
                 position: relative;
-                
                 left: 31vw;
                 display: block;
             }
         }
     }
+
     .CROSSPLATFORM_phone {
         position: absolute;
         left: 53.7%;
         top: 49%;
         z-index: 200;
     }
-}
+} // CROSSPLATFORM
 
-/* ACTIVITY block */
+/* Activity block */
 
 .ACTIVITY {
 
@@ -511,13 +502,14 @@ h1, h6 {
                             &::-webkit-scrollbar-thumb:hover{
                                 background-color:#75c0b2;
                             }
-                        }
-                    } /* ACCORDION */
-                }
-            }
-        }
-    }
-}
+                        } 
+
+                    } // Active_main
+                } // Accordion
+            } // ACTIVITY_content_item
+        } // ACTIVITY_content
+    } // ACTIVITY_block
+} // ACTIVITY
 
 /* Quote block */
 
@@ -585,33 +577,306 @@ h1, h6 {
     } // Quote content
 } // Quote 
 
+/* Team block */
 
+.TEAM {
+    .TEAM_block {
+        width: 88vw;
+        margin: 0 auto;
+        text-align: center;
 
-@media (max-width: 1333px) {
-    .ABOUT_galery {
+        .TEAM_galery {
+            margin-top: 96px;
+            display: flex;
+            justify-content: space-between;
 
-        .ABOUT_galery_item img {
-            width: 100%;
+            .TEAM_image {
+                position: relative;
+                background-color: #95e1d3;
+
+                &:hover .socnet {
+                    opacity: 1;
+                    transform: translate(-10px, -10px);
+                    transition: opacity .2s, transform .4s;
+                }
+            }
+
+            .TEAM_image:after {
+                content: "";
+                position: absolute;
+                opacity: 0;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                transition: 0.4s;
+                background: linear-gradient(0deg, #fce38a, #f38181);
+            }
+            
+            .TEAM_image:hover:after {
+                opacity: .9;
+                transition: 0.4s;
+                transform: translate(-10px, -10px);
+            }
+            
+            .TEAM_image img {
+                transition: 0.4s;
+                display: block;
+                width: 100%;
+            }
+
+            .TEAM_image:hover img {
+                transform: translate(-10px, -10px);
+                transition: 0.4s;
+            }
+
+            .TEAM_person {
+                padding-top: 30px;
+
+                .TEAM_name {
+                    display: block;
+                    .montserrat(@fs: 15px; @fw: 400;);
+                    padding-bottom: 15px;
+                    text-transform: uppercase;
+                }
+                
+                .TEAM_profession {
+                    display: block;
+                    .roboto(@fs: 15px;);
+                    font-weight: 300;
+                    font-style: italic;
+                    color: #999999;
+                }
+            }
+
+            .socnet {
+                opacity: 0;
+                z-index: 500;
+                position: absolute;
+                left: 50%;
+                top: 50%;
+                margin-top: -20px;
+                margin-left: -115px;
+                transition: opacity .2s, transform .4s;
+                display: flex;
+                background-color: #fff;
+
+                a {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    width: 56px;
+                    height: 56px;
+                    background-color: #fce38a;
+                    transition: .2s;
+                    color: #f38181;
+                    font-size: 24px;
+                    text-decoration: none;
+                    border-right: 1px solid #f9bd87;
+                    transition: 0.2s;
+                }
+
+                a:hover {
+                    background-color: #f38181;
+                    transition: .1s;
+                    color: #fff;
+                    font-size: 24px;
+                    text-decoration: none;
+                    border-right: 1px solid #f9bd87;
+                    transition: .1s;
+                }
+
+                a:nth-child(4) {
+                    border-right-width: 0px;
+                }
+            } // socnet
+        } // TEAM_galery
+    } // TEAM_block
+} // TEAM
+
+/* Logotypes block */
+
+.LOGOTYPES {
+    background-color: #f8f8f8;
+
+    .LOGOTYPES_content {
+        width: 88vw;
+        margin: 0 auto;
+        padding: 50px 0;
+        margin-top: 118px;
+        display: grid;
+        grid-template-columns: repeat(6, 130px);
+        justify-content: space-between;
+
+        .logo {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            opacity: 0.9;
+        }
+    }
+} // LOGOTYPES
+
+/* WORKS block */
+
+.WORKS {
+    
+    .WORKS_content {
+        display: flex;
+        align-content: center;
+        justify-content: center;
+        margin-top: 106px;
+
+        .WORKS_item {
+            position: relative;
+
+            &:after {
+                content: "";
+                position: absolute;
+                opacity: 0;
+                top: 0;
+                right: 0;
+                bottom: 0;
+                left: 0;
+                transition: 0.4s;
+                background: linear-gradient(0deg, #fce38a, #f38181);
+            }
+            
+            &:hover {
+                &:after {
+                    opacity: .9;
+                }
+
+                .WORK_text {
+                    opacity: 1;
+                }
+            }
         }
 
+        .WORK_image {
+            max-width: 100%;
+            height: auto;
+            display: block;
+        }
+
+        .WORK_text {
+            width: 100%;
+            position: absolute;
+            left: 0;
+            top: 50%;
+            text-align: center;
+            transform: translate3d(0, -50%, 0);
+            z-index: 2;
+            opacity: 0;
+
+            .text_title {
+                display: block;
+                .montserrat(@fs: 14px; @fw: 400;);
+                text-transform: uppercase;
+                padding-bottom: 10px;
+                padding-top: 10px;
+                color: #fff;
+                margin: 0;
+            }
+
+            .text_description {
+                display: block;
+                .roboto(@fs: 15px;);
+                font-weight: 300;
+                color: #fff;
+                font-style: italic;
+                margin: 0;
+            }
+
+        } // WORKS_text
+    } // WORKS_content 
+} // WORKS
+
+/* WORKS_QUOTE block */
+
+.WORKS_QUOTE {
+
+    .WORKS_QUOTE_content {
+        max-width: 1000px;
+        margin: 100px auto 130px auto;
+        padding: 0 50px;
+        display: flex;
+    }
+
+    .WORKS_QUOTE_text {
+        padding-left: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 780px;
+        
+        p {
+            font-family: 'Roboto', sans-serif;
+            font-size: 24px;
+            font-weight: 300;
+            font-style: italic;
+            color: #999999;
+            line-height: 36px;
+            padding: 0;
+            margin: 0;
+
+            &:before {
+                content: "\201c";
+            }
+
+            &:after {
+                content: "\201d";
+            }
+        }
+    }
+
+    .WORKS_QUOTE_author {
+        padding-top: 20px;
+        font-family: 'Kaushan Script', cursive;
+        font-size: 24px;
+
+        &:before { 
+            content: "";
+            display: inline-block;
+            width: 60px;
+            height: 3px;
+            background-color: #f38181;
+            position: relative;
+            top: -5px;
+            margin-right: 10px;
+        }
     }
 }
 
+
+@media (max-width: 1333px) {
+
+    // ABOUT
+
+    .ABOUT_galery {
+        .ABOUT_galery_item img {
+            width: 100%;
+        }
+    }
+
+} // @media 1333px
+
 @media (max-width: 1080px) {
+
+    // NUMBERS
+
    .NUMBERS_content {
     grid-template-columns: 16.5% 16.5% 34% 16.5% 16.5% !important;
     
         .NUMBERS_item1 {
             grid-row: ~"1 / 2";
             grid-column: ~"1 / 3";
-
             height: 135px !important;
             border-bottom: 1px solid rgba(255, 255, 255, .3);
         }
         .NUMBERS_item2 {
             grid-row: ~"2 / 3";
             grid-column: ~"1 / 3";
-
             height: 135px !important;
             border-right: 1px solid rgba(255, 255, 255, .3);
         }
@@ -623,7 +888,6 @@ h1, h6 {
         .NUMBERS_item4 {
             grid-row: 1;
             grid-column: ~"4 / 6";
-
             height: 135px !important;
             border-right: 1px solid rgba(255, 255, 255, .3);
             border-bottom: 1px solid rgba(255, 255, 255, .3);
@@ -631,11 +895,11 @@ h1, h6 {
         .NUMBERS_item5 {
             grid-row: 2;
             grid-column: ~"4 / 6";
-
             height: 135px !important;
-            
         }
    }
+
+   // SERVICE
 
    .SERVICE_table {
        grid-template-columns: repeat(2, 50%);
@@ -643,7 +907,40 @@ h1, h6 {
 
        .SERVICE_table_item:nth-child(4) {
         border-bottom: 1px solid #e5e5e5;
-    }
+        }
    }
 
-}
+   // LOGOTYPES
+
+   .LOGOTYPES_content {
+       grid-template-columns: repeat(3, 130px) !important;
+       grid-template-rows: repeat(2, 1fr) !important;   
+   }
+
+} // @media 1080px
+
+@media (max-width: 800px) {
+
+    // TEAM
+
+    .TEAM_galery {
+
+        .socnet {
+            flex-direction: column;
+            left: 5% !important;
+            top: 5% !important;
+            margin-top: 0 !important;
+            margin-left: 0 !important;
+
+            a {
+                border-right-width: 0px !important;
+                border-top: 1px solid #f9bd87;
+            }
+
+            a:nth-child(1) {
+                border-top-width: 0px;
+            }
+        } 
+    } 
+
+} // @media 800px
