--- a/styles/styles.less
+++ b/styles/styles.less
@@ -848,6 +848,156 @@ h1, h6 {
     }
 }
 
+/* REVIEWS */
+
+.REVIEWS {
+    background-image: url(../img/reviews_background.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 60px;
+        
+
+    .REVIEWS_content {
+        padding-top: 63px;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        width: 83vw;
+        margin: 0 auto;
+        padding-bottom: 52px;
+
+        .REVIEWS_item {
+            display: flex;
+            margin-bottom: 50px;
+
+            .review_content {
+                padding-top: 10px;
+                padding-left: 30px;
+                padding-right: 40px;
+            }
+
+            .review_author {
+                display: block;
+                .montserrat(@fs: 15px; @fw: 400;);
+                text-transform: uppercase;
+                padding-bottom: 16px;
+            }
+
+            .review_author_profession {
+                display: block;
+                position: relative;
+                .roboto(@fs: 15px;);
+                padding-bottom: 22px;
+                font-weight: 300;
+                font-style: italic;
+                color: #000;
+
+                &:after {
+                    content: "";
+                    width: 60px;
+                    height: 3px;
+                    background-color: #f38181;
+                    position: absolute;
+                    top: 32px;
+                    right: 0;
+                    bottom: 0;
+                    left: 0;
+                }
+            }
+
+            .review_text {
+                line-height: 24px;
+                width: 100%;
+                color: #999;
+                .roboto(@fs: 15px;);
+            }
+
+        } // REVIEWS_item
+    } // REVIEWS_content
+} // REVIEWS
+
+/* BLOG */
+
+.BLOG {
+
+    .BLOG_content {
+        width: 87vw;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-column-gap: 30px;
+
+        .BLOG_post {
+
+            .blog_image {
+                position: relative;
+                width: 100%;
+
+                img {
+                    display: block;
+                    width: 100%;
+                }
+
+                .blog_date {
+                    position: absolute;
+                    display: flex;
+                    flex-direction: column;
+                    left: 0;
+                    top: 100%;
+                    transform: translate(-10px, -114%);
+                    padding: 10px 15px;
+                    text-align: center;
+                    background-color: #95e1d3;
+                    color: #fff;
+
+                    .date_num {
+                        .montserrat(@fs: 30px; @fw: 700;);
+                    }
+                    
+                    .date_month {
+                        .roboto(@fs: 15px;);
+                        font-weight: 300;
+                        font-style: italic;
+                        color: #fff;
+                    }
+                }
+            }
+
+            .blog_text {
+                .roboto(@fs: 15px;);
+                line-height: 24px;
+                display: block;
+                padding: 0 25px 10px 0;
+                max-width: 350px;
+                
+                color: #999999;
+
+                .blog_title {
+                    .montserrat(@fs: 14px; @fw: 400;);
+                    text-transform: uppercase;
+                    display: block;
+                    padding: 20px 0 0 0;
+                    color: #000;
+                }
+            }
+
+            .blog_stat {
+                color: #95e1d3;
+                padding-top: 20px;
+                border-top: 1px solid #e5e5e5;
+
+                .stat_looks, .stat_comments {
+                    .roboto(@fs: 15px;);
+                    font-weight: 300;
+                    font-style: italic;
+                    color: #999999;
+                    padding-left: 5px;
+                    padding-right: 20px;
+                }
+            }
+        }
+    }
+}
 
 @media (max-width: 1333px) {
 
@@ -856,6 +1006,26 @@ h1, h6 {
     .ABOUT_galery {
         .ABOUT_galery_item img {
             width: 100%;
+        }
+    }
+
+    // BLOG
+
+    .BLOG_content {
+        grid-template-columns: repeat(2, 1fr) !important;
+        grid-template-rows: repeat(2, 1fr) !important;
+        
+        .BLOG_post {
+            margin: 0 auto;
+       
+            .blog_image {
+                width: 370px !important;
+            }
+
+            .blog_stat {
+                width: 370px;
+                margin-bottom: 30px;
+            }
         }
     }
 
@@ -917,7 +1087,38 @@ h1, h6 {
        grid-template-rows: repeat(2, 1fr) !important;   
    }
 
+   // REVIEWS
+
+   .REVIEWS_content {
+       grid-template-rows: repeat(4, 1fr) !important;
+       grid-template-columns: repeat(1, 1fr) !important;
+   }
+
 } // @media 1080px
+
+@media (max-width: 890px) {
+
+    // BLOG
+
+    .BLOG_content {
+        grid-template-columns: repeat(1, 1fr) !important;
+        grid-template-rows: repeat(3, 1fr) !important;
+        
+        .BLOG_post {
+            margin: 0 auto;
+       
+            .blog_image {
+                width: 370px !important;
+            }
+
+            .blog_stat {
+                width: 370px;
+                margin-bottom: 30px;
+            }
+        }
+    }
+
+}
 
 @media (max-width: 800px) {
 
